initial hdb migration